Using flex to fix the issue where modals are not centered

--- a/boss/styles.css
+++ b/boss/styles.css
@@ -1029,15 +1029,9 @@ ul.bullet-list li::before {
 }
 
 .center-window {
-  position: absolute;
-  /* The reason the `top` is 25% is because the height is not defined. And its
-   * height can not be determined intrinsically. Therefore, the best guess is to
-   * make the modal about 25% of the way down in the screen. */
-  top: 25%;
-  left: 50%;
-  /* The window's containing div must set `width` in order for this to work. It
-   * can not determine the intrinsic width. */
-  transform: translateX(-50%);
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;
 }
 
 /* Used to center images in the middle of a container
